--- a/wrr/site-plan-rafting.html
+++ b/wrr/site-plan-rafting.html
@@ -53,10 +53,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#284B63]</td>
-        <td class="secondary">[#3F7478]</td>
-        <td class="accent1">[#8F8F8F]</td>
-        <td class="accent2">[#FFFFFF]</td>
+        <td class="primary">#284B63</td>
+        <td class="secondary">#3F7478</td>
+        <td class="accent1">#8F8F8F]</td>
+        <td class="accent2">#FFFFFF</td>
       </tr>
     </table>
 
