--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -55,7 +55,7 @@
       <tr>
         <td class="primary">#284B63</td>
         <td class="secondary">#3F7478</td>
-        <td class="accent1">#8F8F8F]</td>
+        <td class="accent1">#8F8F8F</td>
         <td class="accent2">#FFFFFF</td>
       </tr>
     </table>
