--- a/wwr/index.html
+++ b/wwr/index.html
@@ -21,7 +21,7 @@
             <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Come Have An Adventure</h1>
+            <h1 class="home-title">Join the Adventure</h1>
             <h4>Memories on the Wild Waters Await</h4>
             <div class="button-box">
                 <a class="book" href="contactus.html">Book Now</a>
