Updated CSS of main page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
             <h1>Brandon Cushenberry | WDD 130</h1>
-            <img src="images/profile.webp" alt="A picture of Brandon" width="200">
+            <img src="images/profile.webp" alt="A picture of Brandon">
             <p>Hi there! My name's Brandon. I like brownies and ice cream.</p>
         </main>
         <footer>
