Added a page for the web proposal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <a id="active" href="#">Home</a>
                 <a href="wwr/">White Water Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+                <a href="proposal/web-proposal.pdf">Website Proposal</a>
             </nav>
         </header>
         <main>
