Made grid updates

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,7 +15,9 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
@@ -23,10 +25,10 @@
                 <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
             </div>
             <section id="hero-msg">
-                <h1 class="home-title">Join the Adventure</h1>
-                <h4>Memories on the Wild Waters Await</h4>
+                <h1 class="home-title">Have an Adventure</h1>
+                <h4>Make Memories with Dry Oar</h4>
                 <div class="button-box">
-                    <a class="book" href="contactus.html">Book Now</a>
+                    <a class="book" href="rates.html">Book Now</a>
                 </div>
             </section>
         </div>
@@ -58,7 +60,7 @@
             <p>Dry Oar &copy; 2023 - Brandon Cushenberry</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
-            <div>
+            <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
                 </a>
