Updated site plan with text & images

--- a/oreniomakase/site-plan.html
+++ b/oreniomakase/site-plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Disney</a>
+        <a href="#">Starbucks</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Disney <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Starbucks  <!-- change this -->
         </div>
 
         <div class="top">
@@ -122,31 +122,42 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Ore ni Omakase</h3>
       <p>
-        [Written copy for the home page here]
+        <strong>Introduction</strong><br>
+        Whether you've been to Japan before and are feeling nostalgic for some senbei, or if you've never been but would like to dip your feet in the water, we've got you covered! At Ore ni Omakase, we offer personal shopping services for everything from popular best-sellers and Japan-exclusive merchandise to the latest snacks and trinkets available in the Land of the Rising Sun.
+      </p>
+      <p>
+        <strong>How Does It Work?</strong><br>
+        How does it work, you ask? It's simple! Just take a look at our offerings on Instagram and leave a comment or shoot us a message on anything that looks appealing. Don't see  the thing that you want? Not a problem! You can let us know about whatever you want to order, and we'll track it down for you! Enjoy a taste of Japan delivered straight to your front door!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/fujisan-small.jpg" alt="Image of Mount Fuji">
+        <img src="images/akiba-small.jpg" alt="Image of Akihabara in Tokyo">
 
       <!-- </ul> -->
-      <h3>[Page 2]</h3>
+      <h3>Disney Exclusives</h3>
       <p>
-        [Written copy for the Page 2 here]
+        <strong>Disney in Japan</strong><br>
+        Disney is hugely popular in Japan, which is made abundantly apparent from the many exclusives that are launched here. While sm-home are released in stores such as the Disney Flagship Store in downtown Tokyo, the majority of the exclusives are reserved for the Disney parks themselves.
+      </p>
+      <p>
+        <strong>We've Got You Covered!</strong><br>
+        But no need to worry! Ore ni omakase! ("Leave it to me!") We take regular trips to Disneyland and Disney Sea and make sure we're there for every major launch during the year. What's more, we have immediate access to the Flagship Store and visit it regularly. If you're hankering for the latest Mickey merch or want to spend a bit more time with Duffy and Friends, we've got you covered!
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/disney-at-night-small.jpg" alt="Cherry Blossom Mickey & Minnie">
+        <img src="images/disney-tokyo-train-small.jpg" alt="Disney Store Japan 30th Anniversary Goods">
 
       <!-- </ul> -->
-      <h3>[Page 3]</h3>
+      <h3>Starbucks Exclusives</h3>
       <p>
-        [Written copy for the Page 3 here]
+        <strong>Starbucks in Japan</strong><br>
+        Starbucks tumblers have long been the object of many a collector's eye, and the coffee giant's seasonal offerings in Japan could comfortably fit in anyone's collection! From exclusive designs that incorporate the creative, adorable aesthetic found throughout Japanese pop culture, to special exclusive crossovers like the recent Snoopy lineup, there's sure to be something for everyone, coffee lover or not!
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/starbucks-small.jpg" alt="image for page3">
+        <img src="images/starbucks-snoopy.jpg" alt="image for page3">
 
       <!-- </ul> -->
       <hr>
