Included site wireframes and updated some text

--- a/oreniomakase/site-plan.html
+++ b/oreniomakase/site-plan.html
@@ -124,12 +124,15 @@
       </h2>
       <h3>Ore ni Omakase</h3>
       <p>
-        <strong>Introduction</strong><br>
         Whether you've been to Japan before and are feeling nostalgic for some senbei, or if you've never been but would like to dip your feet in the water, we've got you covered! At Ore ni Omakase, we offer personal shopping services for everything from popular best-sellers and Japan-exclusive merchandise to the latest snacks and trinkets available in the Land of the Rising Sun.
       </p>
       <p>
         <strong>How Does It Work?</strong><br>
         How does it work, you ask? It's simple! Just take a look at our offerings on Instagram and leave a comment or shoot us a message on anything that looks appealing. Don't see  the thing that you want? Not a problem! You can let us know about whatever you want to order, and we'll track it down for you! Enjoy a taste of Japan delivered straight to your front door!
+      </p>
+      <p>
+        <strong>Where Do I Get Started?</strong><br>
+        Feel free to browse through more of the site, and when you're ready to place an order or make an inquiry, you can click on the "Contact Us" button below, which will take you straight to our Instagram. We look forward to hearing from you!
       </p>
       <p>Images for the Home page</p>
         <img src="images/fujisan-small.jpg" alt="Image of Mount Fuji">
@@ -145,6 +148,9 @@
         <strong>We've Got You Covered!</strong><br>
         But no need to worry! Ore ni omakase! ("Leave it to me!") We take regular trips to Disneyland and Disney Sea and make sure we're there for every major launch during the year. What's more, we have immediate access to the Flagship Store and visit it regularly. If you're hankering for the latest Mickey merch or want to spend a bit more time with Duffy and Friends, we've got you covered!
       </p>
+      <p>
+        Above are a few of the more recent lineups that have been on sale. On the left is Lineup #1 featuring Cute Characters A, B, C. In the center is Lineup #2 with Fan Favorite celebrating Event. On the right is Lineup #3 with Blank.
+      </p>
       <p>Images for the Page 2</p>
         <img src="images/disney-at-night-small.jpg" alt="Cherry Blossom Mickey & Minnie">
         <img src="images/disney-tokyo-train-small.jpg" alt="Disney Store Japan 30th Anniversary Goods">
@@ -154,6 +160,13 @@
       <p>
         <strong>Starbucks in Japan</strong><br>
         Starbucks tumblers have long been the object of many a collector's eye, and the coffee giant's seasonal offerings in Japan could comfortably fit in anyone's collection! From exclusive designs that incorporate the creative, adorable aesthetic found throughout Japanese pop culture, to special exclusive crossovers like the recent Snoopy lineup, there's sure to be something for everyone, coffee lover or not!
+      </p>
+      <p>
+        <strong>The Starbucks Reserve Roastery</strong><br>
+        In addition to the regular Starbucks merchandise, there is also a special Starbucks Roastery in Tokyo that features exclusive merchandise of its own! Positioned as a higher-end type of Starbucks, the tumblers and other products offered exhibit a certain flair that differentiate them from standard Starbucks fare.
+      </p>
+      <p>
+        Above are a few of the more recent lineups that have been on sale. On the left is Lineup #1 that was released during the ABC season. In the center is Lineup #2, which was part of the XYZ season. On the right is a peek at some of the Starbucks Reserve lineup.
       </p>
       <p>Images for the Page 3</p>
         <img src="images/starbucks-small.jpg" alt="image for page3">
@@ -169,21 +182,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        I thought it would be nice to make a sort of brand banner at the top with the site name and perhaps some sort of catch copy. The links will then be below that, and there will be a couple sections each with a header, text, and an image. The first blurb of text on the homepage doesn't have a header because it's just the introduction.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/wireframe-home.jpg" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Disney</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The first two sections show larger images with general introductory-type text, while the third section consists of three images of sample products and a small blurb beneath that say "These are some cool sample products!". The design for both the child pages is the same since they serve the same purpose.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/wireframe-pages.jpg" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Starbucks</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        The first two sections show larger images with general introductory-type text, while the third section consists of three images of sample products and a small blurb beneath that say "These are some cool sample products!". The design for both the child pages is the same since they serve the same purpose.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/wireframe-pages.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
