Updated personal site with more images, CSS

--- a/oreniomakase/index.html
+++ b/oreniomakase/index.html
@@ -26,32 +26,39 @@
             <div id="hero-box">
                 <img id="hero-img" src="images/akiba.jpg" alt="Shopping in Akihabara">
             </div>
-            <section id="hero-msg">
-                <h2 class="home-title">Ore ni Omakase!</h2>
-                <p>
-                    Whether you've been to Japan before and are feeling nostalgic for some senbei, or if you've never been but would like to dip your feet in the water, we've got you covered! At Ore ni Omakase, we offer personal shopping services for everything from popular best-sellers and Japan-exclusive merchandise to the latest snacks and trinkets available in the Land of the Rising Sun.
+            <section>
+                <h2 id="hero-title">Ore ni Omakase!</h2>
+                <p id="hero-msg">
+                    Whether you've been to Japan before and are feeling nostalgic for some senbei, or you've never been but would like to dip your feet in the water, we've got you covered!
+                    <br>
+                    At Ore ni Omakase, we offer personal shopping services for everything from popular best-sellers and Japan-exclusive merchandise to the latest snacks and trinkets available in the Land of the Rising Sun.
                 </p>
             </section>
         </div>
         <main class="home-grid">
-            <section>
+            <section class="explanation">
                 <div>
-                    <img id="how-it-works-img" src="images/fujisan-small.jpg" alt="Mount Fuji">
+                    <img class="home-img" id="how-it-works-img" src="images/fujisan.jpg" alt="Mount Fuji">
+                </div>
+                </section>
+            <section class="explanation" id="how-it-works">
+                <div class="vertical-centering">
+                    <h2>How Does It Work?</h2>
+                    <p>It's simple! Just take a look at our offerings on Instagram and leave a comment or shoot us a message on anything that looks appealing. 
+                    <br>
+                    <br>
+                    Don't see the thing that you want? Not a problem! You can let us know about whatever you want to order, and we'll track it down for you! Enjoy a taste of Japan delivered straight to your front door!.</p>
                 </div>
             </section>
-            <section class="how-it-works">
-                <h2>How Does It Work?</h2>
-                <p>How does it work, you ask? It's simple! Just take a look at our offerings on Instagram and leave a comment or shoot us a message on anything that looks appealing. Don't see  the thing that you want? Not a problem! You can let us know about whatever you want to order, and we'll track it down for you! Enjoy a taste of Japan delivered straight to your front door!.</p>
-            </section>
-            <section>
-                <div>
-                    <img id="getting-started-img" src="" alt="Getting Started?">
+            <section class ="starting" id="getting-started">
+                <div class="vertical-centering">
+                    <h2>Where Do I Get Started?</h2>
+                    <p>Feel free to browse through more of the site, and when you're ready to place an order or make an inquiry, you can click on the "Contact Us" button below, which will take you straight to our Instagram. We look forward to hearing from you!</p>
                 </div>
             </section>
-            <section class="getting-started">
-                <h2>Where Do I Get Started?</h2>
-                <p>Feel free to browse through more of the site, and when you're ready to place an order or make an inquiry, you can click on the "Contact Us" button below, which will take you straight to our Instagram. We look forward to hearing from you!</p>
-            </section>
+            <div>
+                <img class="home-img" id="getting-started-img" src="images/tokyo-tower.jpg" alt="Getting Started?">
+            </div>
         </main>
         <footer>
             <p>&copy; 2023 - Brandon Cushenberry</p>
