Updated CSS for home

--- a/oreniomakase/index.html
+++ b/oreniomakase/index.html
@@ -8,70 +8,74 @@
     <title>Ore ni Omakase</title>
 </head>
 <body>
-    <div>
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Store Logo">
+    <header class="site-header">
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/logo.png" alt="Store Logo">
             </a>
-            <div>
-                <h1>Leave it to us!</h1>
-            </div>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="disney.html">Disney Goods</a>
-                <a href="starbucks.html">Starbucks Goods</a>
-            </nav>
-        </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/akiba.jpg" alt="Shopping in Akihabara">
-            </div>
-            <section>
-                <h2 id="hero-title">Ore ni Omakase!</h2>
-                <p id="hero-msg">
-                    Whether you've been to Japan before and are feeling nostalgic for some senbei, or you've never been but would like to dip your feet in the water, we've got you covered!
-                    <br>
-                    At Ore ni Omakase, we offer personal shopping services for everything from popular best-sellers and Japan-exclusive merchandise to the latest snacks and trinkets available in the Land of the Rising Sun.
-                </p>
-            </section>
         </div>
-        <main class="home-grid">
-            <section class="explanation">
-                <div>
-                    <img class="home-img" id="how-it-works-img" src="images/fujisan.jpg" alt="Mount Fuji">
-                </div>
-                </section>
-            <section class="explanation" id="how-it-works">
-                <div class="vertical-centering">
-                    <h2>How Does It Work?</h2>
-                    <p>It's simple! Just take a look at our offerings on Instagram and leave a comment or shoot us a message on anything that looks appealing. 
-                    <br>
-                    <br>
-                    Don't see the thing that you want? Not a problem! You can let us know about whatever you want to order, and we'll track it down for you! Enjoy a taste of Japan delivered straight to your front door!.</p>
-                </div>
-            </section>
-            <section class ="starting" id="getting-started">
-                <div class="vertical-centering">
-                    <h2>Where Do I Get Started?</h2>
-                    <p>Feel free to browse through more of the site, and when you're ready to place an order or make an inquiry, you can click on the "Contact Us" button below, which will take you straight to our Instagram. We look forward to hearing from you!</p>
-                </div>
-            </section>
-            <div>
-                <img class="home-img" id="getting-started-img" src="images/tokyo-tower.jpg" alt="Getting Started?">
-            </div>
-        </main>
-        <footer>
-            <p>&copy; 2023 - Brandon Cushenberry</p>
-            <p><a href="index.html">Home</a></p>
-            <p><a href="disney.html">Disney Goods</a></p>
-            <p><a href="starbucks.html">Starbucks Goods</a></p>
-            <p><a href="site-plan.html" target="_blank">Site Plan</a></p>
-            <div class="social">    
-                <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-        </footer>
+        <div class="header-h1">
+            <h1>Leave it to us!</h1>
+        </div>
+    </header>
+    <nav class="navigation">
+        <a href="index.html">Home</a>
+        <a href="disney.html">Disney Goods</a>
+        <a href="starbucks.html">Starbucks Goods</a>
+    </nav>
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="images/akiba.jpg" alt="Shopping in Akihabara">
+        </div>
+        <section>
+            <h2 id="hero-title">Ore ni Omakase!</h2>
+            <p id="hero-msg">
+                Whether you've been to Japan before and are feeling nostalgic for some senbei, or you've never been but would like to dip your feet in the water, we've got you covered!
+                <br>
+                At Ore ni Omakase, we offer personal shopping services for everything from popular best-sellers and Japan-exclusive merchandise to the latest snacks and trinkets available in the Land of the Rising Sun.
+            </p>
+        </section>
     </div>
+    <main class="home-grid">
+        <div class="explanation">
+                <img class="home-img" id="how-it-works-img" src="images/fujisan.jpg" alt="Mount Fuji">
+        </div>
+        <section class="explanation" id="how-it-works">
+            <div class="vertical-centering">
+                <h2>How Does It Work?</h2>
+                <p>It's simple! Just take a look at our offerings on Instagram and leave a comment or shoot us a message on anything that looks appealing. 
+                <br>
+                <br>
+                Don't see the thing that you want? Not a problem! You can let us know about whatever you want to order, and we'll track it down for you! Enjoy a taste of Japan delivered straight to your front door!</p>
+            </div>
+        </section>
+        <section class ="starting" id="getting-started">
+            <div class="vertical-centering">
+                <h2>Where Do I Get Started?</h2>
+                <p>Feel free to browse through more of the site, and when you're ready to place an order or make an inquiry, you can click on the Instagram icon in the footer below.
+                <br>
+                <br>
+                When requesting something that hasn't been posted, please be sure to include as many details as possible, including pictures! This will give us the best chance of procuring your item.
+                <br>
+                <br>
+                We look forward to hearing from you!</p>
+            </div>
+        </section>
+        <div>
+            <img class="home-img" id="getting-started-img" src="images/tokyo-tower.jpg" alt="Getting Started?">
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2023 - Brandon Cushenberry</p>
+        <p><a href="index.html">Home</a></p>
+        <p><a href="disney.html">Disney Goods</a></p>
+        <p><a href="starbucks.html">Starbucks Goods</a></p>
+        <p><a href="site-plan.html" target="_blank">Site Plan</a></p>
+        <div class="social">    
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
