Fixed HTML issues

--- a/oreniomakase/disney.html
+++ b/oreniomakase/disney.html
@@ -24,14 +24,11 @@
         <a class="text-link" href="starbucks.html">Starbucks Goods</a>
         <a class="text-link" href="site-plan.html" target="_blank">Site Plan</a>
     </nav>
-        </header>
         <main class="subpage-main">
             <section>
                 <div>
                     <img class="subpage-main-img" src="images/disney-at-night.jpg" alt="Tokyo Disneyland">
                 </div>
-            </section>
-            <section>
                 <h2 class="subpage-title">Disney in Japan</h2>
                 <p>
                     Disney has long been hugely popular in Japan, which was the second country in the world to get its Disney theme park and the first outside of the US.
@@ -53,25 +50,25 @@
                 </p>
             </section>
             <div class="sample-products">
-                <section>
+                <div>
                     <img class="card-img" src="images/disney-christmas-dolls.jpg" alt="Disney Christmas Dolls">
                     <p>Dolls of Mickey, Minnie, Pluto, and the Chipmunks in Santa<br>attire as part of the 2022 Christmas lineup.</p>
-                </section>
-                <section>
+                </div>
+                <div>
                     <img class="card-img" src="images/disney-new-years-crop.jpg" alt="Disney New Year Lineup">
                     <p>Exclusive Mickey and Minnie daruma dolls in celebration<br>of the 2023 new year.</p>
-                </section>
-                <section>
+                </div>
+                <div>
                     <img class="card-img" src="images/disney-flagship-30th-crop.jpg" alt="Disney Store 30th Anniversary Goods">
                     <p>A special crossover between Disney and Godiva to<br>celebrate the Disney Store's 30th anniversary.</p>
-                </section>
-                <section class="sample-products-msg">
+                </div>
+                <div class="sample-products-msg">
                     <p>Above are a few of the more recent lineups that we have featured from the Disney flagship store in Tokyo. See anything you like?
                     <br>
                     Well, there is plenty more where that came from! If you are at all interested in Disney, you won't regret stopping by our Instagram.
                     <br>
                     And remember: if there's something you want that you don't see on our page, you can always reach out and make a request, and we'll do our best to get it for you!</p>
-                </section>
+                </div>
             </div>
         </main>
         <footer>
