--- a/oreniomakase/starbucks.html
+++ b/oreniomakase/starbucks.html
@@ -24,7 +24,6 @@
         <a class="text-link" href="starbucks.html">Starbucks Goods</a>
         <a class="text-link" href="site-plan.html" target="_blank">Site Plan</a>
     </nav>
-        </header>
         <main class="subpage-main">
             <section>
                 <div>
@@ -49,25 +48,25 @@
                 </p>
             </section>
             <div class="sample-products">
-                <section>
+                <div>
                     <img class="card-img" src="images/" alt="">
                     <p><br></p>
-                </section>
-                <section>
+                </div>
+                <div>
                     <img class="card-img" src="images/" alt="">
                     <p><br></p>
-                </section>
-                <section>
+                </div>
+                <div>
                     <img class="card-img" src="images/" alt="">
                     <p><br></p>
-                </section>
-                <section class="sample-products-msg">
+                </div>
+                <div class="sample-products-msg">
                     <p>Above are a few of the more recent lineups that we have featured from Starbucks in Japan and the Starbucks Reserve Roastery in Tokyo. See anything you like?
                     <br>
                     If you are at all interested in tumblers and other drinkware from Starbucks, you won't regret stopping by our Instagram.
                     <br>
                     And remember: if there's something you want that you don't see on our page, you can always reach out and make a request, and we'll do our best to get it for you!</p>
-                </section>
+                </div>
             </div>
         </main>
         <footer>
