Removed unused images

--- a/oreniomakase/site-plan.html
+++ b/oreniomakase/site-plan.html
@@ -169,8 +169,8 @@
         Above are a few of the more recent lineups that have been on sale. On the left is Lineup #1 that was released during the ABC season. In the center is Lineup #2, which was part of the XYZ season. On the right is a peek at some of the Starbucks Reserve lineup.
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/starbucks-small.jpg" alt="image for page3">
-        <img src="images/starbucks-snoopy.jpg" alt="image for page3">
+        <img src="images/starbucks-small.jpg" alt="Starbucks in Japan">
+        <img src="images/starbucks-snoopy.jpg" alt="Starbucks Snoopy Lineup">
 
       <!-- </ul> -->
       <hr>
