--- a/oreniomakase/index.html
+++ b/oreniomakase/index.html
@@ -26,7 +26,7 @@
     </nav>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/akiba.jpg" alt="Shopping in Akihabara">
+            <img id="hero-img" src="images/akiba.avif" alt="Shopping in Akihabara">
         </div>
         <section>
             <h2 id="hero-title">Ore ni Omakase!</h2>
