--- a/oreniomakase/starbucks.html
+++ b/oreniomakase/starbucks.html
@@ -71,10 +71,10 @@
         </main>
         <footer>
             <p>&copy; 2023 - Brandon Cushenberry</p>
-            <p><a href="index.html">Home</a></p>
-            <p><a href="disney.html">Disney Goods</a></p>
-            <p><a href="starbucks.html">Starbucks Goods</a></p>
-            <p><a href="site-plan.html" target="_blank">Site Plan</a></p>
+            <a class="text-link" href="index.html">Home</a>
+            <a class="text-link" href="disney.html">Disney Goods</a>
+            <a class="text-link" href="starbucks.html">Starbucks Goods</a>
+            <a class="text-link" href="site-plan.html" target="_blank">Site Plan</a>
             <div class="social">    
                 <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
