Added images and updated code

--- a/oreniomakase/starbucks.html
+++ b/oreniomakase/starbucks.html
@@ -35,35 +35,39 @@
                 <p>
                     Starbucks tumblers have long been the object of many a collector's eye, and the coffee giant's seasonal offerings in Japan could comfortably fit in anyone's collection!
                     <br>
-                    From exclusive designs that incorporate the creative, adorable aesthetic found throughout Japanese pop culture, to special exclusive crossovers like the recent Snoopy lineup, there's sure to be something for everyone, coffee lover or not!
+                    From exclusive designs that incorporate the unique, cutesy aesthetic of Japanese pop culture, to special exclusive crossovers like the recent Peanut/Snoopy lineup,
+                    <br>
+                    there's sure to be something for everyone, coffee lover or not! If you're looking for something a little more classy, look no further than the Starbucks Reserve Roastery!
                 </p>
             </section>
             <section class="subpage-subsection">
                 <img class="subpage-sub-img" src="images/starbucks-roastery.jpg" alt="The Starbucks Reserve Roastery in Tokyo">
                 <h2>The Starbucks Reserve Roastery</h2>
                 <p>
-                    In addition to the regular Starbucks merchandise, there is also a special Starbucks Roastery in Tokyo that features exclusive merchandise of its own!
+                    In addition to regular Starbucks branches, there is also a Starbucks Roastery in Tokyo that features exclusive merchandise of its own!
                     <br>
-                    Positioned as a higher-end type of Starbucks, the tumblers and other products offered exhibit a certain flair that differentiate them from standard Starbucks fare.
+                    Positioned as a higher-end type of Starbucks, the Roastery offers tumblers and other products with a certain flair that differentiate themselves
+                    <br>
+                    from standard Starbucks fare. The designs tend to be more minimalist with less emphasis on brand logos in favor of a more sophisitcated look.
                 </p>
             </section>
             <div class="sample-products">
                 <div>
-                    <img class="card-img" src="images/" alt="">
-                    <p><br></p>
+                    <img class="card-img" src="images/starbucks-been-there-m.jpg" alt="Starbucks Been There Series">
+                    <p>The "Been There" series is perfect for the traveling collector!<br>Get exclusive tumblers from Tokyo and other areas!</p>
                 </div>
                 <div>
-                    <img class="card-img" src="images/" alt="">
-                    <p><br></p>
+                    <img class="card-img" src="images/starbucks-bears-m.jpg" alt="">
+                    <p>At Starbucks in Japan, it's not just about tumblers! There<br>is a variety of merchandise offered throughout the year.</p>
                 </div>
                 <div>
-                    <img class="card-img" src="images/" alt="">
-                    <p><br></p>
+                    <img class="card-img" src="images/starbucks-roastery-tumbler-m.jpg" alt="">
+                    <p>The Starbucks Roastery in Tokyo has its own merchandise lineup,<br>including some pretty sleeek tumblers!</p>
                 </div>
                 <div class="sample-products-msg">
-                    <p>Above are a few of the more recent lineups that we have featured from Starbucks in Japan and the Starbucks Reserve Roastery in Tokyo. See anything you like?
+                    <p>Above are some of the more recent Starbucks offerings from Tokyo and the Starbucks Reserve Roastery. See anything you like?
                     <br>
-                    If you are at all interested in tumblers and other drinkware from Starbucks, you won't regret stopping by our Instagram.
+                    If you're a tumbler collector or just curious about what the next Starbucks collaboration will be, come stop by our Instagram and take a look!
                     <br>
                     And remember: if there's something you want that you don't see on our page, you can always reach out and make a request, and we'll do our best to get it for you!</p>
                 </div>
